--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        {% seo %}
         <link rel="stylesheet" href="{{ site.snipcart_css }}" />
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
         <link rel="icon" type="image/png" href="{{ 'images/favicon.png' | relative_url }}">
