--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,6 +16,7 @@ $color_light_grey: {{ palette.light_grey }};
 
 $background_images_primary: url({{ palette.bg_image_primary_fallback }});
 $background_images_primary_opt: url({{ palette.bg_image_primary_optimized }});
+$background_images_product_page: url({{ palette.category_image_bg }});
 
 $background_images_secondary: url({{ palette.bg_image_secondary_fallback }});
 $background_images_secondary_opt: url({{ palette.bg_image_secondary_optimized }});
