change bg color add cart button

--- a/_sass/imports/_buttons.scss
+++ b/_sass/imports/_buttons.scss
@@ -50,7 +50,7 @@
   }
 
   &--std {
-    background-color: $color_active;
+    background-color: #273132;
     color: $color_default;
     svg {
       width: 18px;
