--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -3,6 +3,8 @@ layout: body
 ---
 
     {% assign category_page = '/category' | get_pages | where_exp: "item", "item.slug == page.category" | first %}
+    {% assign sub_category_page = '/sub-categories' | get_pages | where_exp: "item", "item.slug == page.sub-category" | first %}
+
     <main class="content">
         <section class="product content__row content__row--bleed">  
             <div class="product__background-left-overlay"></div>
@@ -25,7 +27,11 @@ layout: body
                     {{ page.title }}
                 </h1>
                 <h2 class="product__category"> 
-                    <a href="{{ category_page.url | relative_url }}"> {{ category_page.title }} </a>
+                    <a href="{{ category_page.url | relative_url }}"> {{ category_page.title }} 
+                        {% if page.sub-category %}
+                        /  {{page.sub-category}}
+                        {% endif %}
+                    </a>
                 </h2>
                 <div class="product__price">
                     ${{ page.price }}
@@ -34,18 +40,19 @@ layout: body
                 <article class="product__description">
                     {{ page.description }}
                 </article>
-
+                <hr>
+                <article class="product__description">
+                    {{ content }}
+                </article>
                 {% include buy_button.html product_page=page %}
             </div>
         </section>
-
         <section class="content__row">
             <h2 class="content__row-title">Related</h2>
             {% assign product_pages = '/products' | get_pages | where_exp: "item", "item.category == category_page.slug" | sort: 'title' | where_exp: "item", "item.id != page.id" %}
             
             {% include product_grid.html product_pages=product_pages cssClass='product-grid--draggable' %}
         </section>
-
         <a href="/store" class="content__row content__row--bleed product__back-to-store">
             <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2.73859 4.30914H19.75V5.59286H2.63961L6.06986 8.98864L5.17449 9.875L0.25 5L5.17449 0.125L6.06986 1.01136L2.73859 4.30914Z" fill="white"/>
