--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -19,7 +19,7 @@
                         {{ product_page.sub-category }}
                     {% endif %}
                 </span>
-                <span class="product-grid__price"> ${{ product_page.price }} </span>
+                <span class="product-grid__price"> R${{ product_page.price }} </span>
             </div>
         </li>
     {% endfor %}
