--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -34,7 +34,7 @@ layout: body
                     </a>
                 </h2>
                 <div class="product__price">
-                    ${{ page.price }}
+                        R${{ page.price }}
                 </div>
 
                 <article class="product__description">
