--- a/_includes/buy_button.html
+++ b/_includes/buy_button.html
@@ -21,7 +21,7 @@
 <button class="button button--std snipcart-add-item"
     data-item-name="{{ product_page.title }}"
     data-item-url="{{ product_page.url }}"
-    data-item-price="{{ product_page.price | raw }}"
+    data-item-price="{{ product_page.price }}"
     data-item-image="{{ product_page.images.default.thumbnail.fallback }}"
     data-item-description="{{ product_page.description }}"
     date-item-categories="{{ product_page.category }}"
