--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -22,6 +22,9 @@ layout: body
                 
                 {% include picture.html image=page.images.default.original alt=page.title cssClass='product__image' %}
             </figure>
+            {% if page.gallery.size > 0 %}
+                {% include product-gallery.html images=page.gallery alt=page.title %}
+            {% endif %}
             <div class="product__details">
                 <h1 class="product__title">
                     {{ page.title }}
@@ -40,7 +43,6 @@ layout: body
                 <article class="product__description">
                     {{ page.description }}
                 </article>
-                <hr>
                 <article class="product__description">
                     {{ content }}
                 </article>
