--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -40,13 +40,14 @@ layout: body
                         R${{ page.price }}
                 </div>
 
-                <article class="product__description">
+                <article class="product__content-product">
                     {{ page.description }}
                 </article>
                 {% include buy_button.html product_page=page %}
             </div>
         </section>
         <section class="desc">
+            <h2 class="content__row-title">Informações do Produto</h2>
             <article class="product__description">
                 {{ content }}
             </article>
