--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -46,7 +46,7 @@ layout: body
                 {% include buy_button.html product_page=page %}
             </div>
         </section>
-        <section class="desc">
+        <section class="product__desc">
             <h2 class="content__row-title">Informações do Produto</h2>
             <article class="product__description">
                 {{ content }}
