--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -160,10 +160,18 @@
         }
     }
 
+    &__desc {
+        width: 100%;
+        max-width: 1300px;
+        margin-bottom: 50px;
+    }
+
     &__content-product {
         font-size: $font_size_regular;
         color: $color_medium;
         margin-bottom: 20px;
+        line-height: 150%;
+        @include smaller-than-tablet { font-size: $font_size_regular; }
     }
 
     &__description {
