--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -49,6 +49,9 @@ layout: body
         <section class="product__desc">
             <h2 class="content__row-title">Informações do Produto</h2>
             <article class="product__description">
+                    {% raw %}
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/eYK4fgplYI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    {% endraw %}
                 {{ content }}
             </article>
         </section>
