--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -12,7 +12,7 @@
                 </figcaption>
             </figure>
             <div class="product-grid__definition">
-                <a href="{{ product_page.url | relative_url }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
+                <a href="{{ product_page.url | site.baseurl }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
                 <span class="product-grid__category"> {{ product_page.category }} </span>
                 <span class="product-grid__sub-category">
                     {% if product_page.sub-category %} 
