--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -1,7 +1,9 @@
 {% assign product_pages = include.product_pages %}
 {% assign listCssClass = include.cssClass %}
+
 <ul class="product-grid {% assign listCssClass_is_not_empty = listCssClass | is_not_empty %}{% if listCssClass_is_not_empty %}{{ listCssClass }}{% endif %}">
     {% for product_page in product_pages %}
+    PAGE URL: {{product_page.url}}
         <li class="product-grid__item">
             <figure data-href="{{ product_page.url | relative_url }}" class="product-grid__item-figure js-figure-link">
                 
@@ -12,7 +14,7 @@
                 </figcaption>
             </figure>
             <div class="product-grid__definition">
-                <a href="{{ product_page.url | site.baseurl }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
+                <a href="{{ product_page.url }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
                 <span class="product-grid__category"> {{ product_page.category }} </span>
                 <span class="product-grid__sub-category">
                     {% if product_page.sub-category %} 
