--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -3,7 +3,6 @@
 
 <ul class="product-grid {% assign listCssClass_is_not_empty = listCssClass | is_not_empty %}{% if listCssClass_is_not_empty %}{{ listCssClass }}{% endif %}">
     {% for product_page in product_pages %}
-    PAGE URL: {{product_page.url}}
         <li class="product-grid__item">
             <figure data-href="{{ product_page.url | relative_url }}" class="product-grid__item-figure js-figure-link">
                 
@@ -14,7 +13,7 @@
                 </figcaption>
             </figure>
             <div class="product-grid__definition">
-                <a data-href="{{ product_page.url }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
+                <a data-href="{{ product_page.url | relative_url }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
                 <span class="product-grid__category"> {{ product_page.category }} </span>
                 <span class="product-grid__sub-category">
                     {% if product_page.sub-category %} 
