--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -13,7 +13,7 @@
                 </figcaption>
             </figure>
             <div class="product-grid__definition">
-                <a data-href="{{ product_page.url | relative_url }}"><h3 class="product-grid__title">{{ product_page.title }}</h3></a>
+                    <h3 class="product-grid__title"> <a href="{{ product_page.url | relative_url }}"> {{ product_page.title }} </a> </h3>
                 <span class="product-grid__category"> {{ product_page.category }} </span>
                 <span class="product-grid__sub-category">
                     {% if product_page.sub-category %} 
