--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -1,6 +1,7 @@
 {% assign product_pages = include.product_pages %}
+{% assign category_link_pages = include.category_link_pages %}
 {% assign listCssClass = include.cssClass %}
-
+{{category_link_pages}}
 <ul class="product-grid {% assign listCssClass_is_not_empty = listCssClass | is_not_empty %}{% if listCssClass_is_not_empty %}{{ listCssClass }}{% endif %}">
     {% for product_page in product_pages %}
         <li class="product-grid__item">
@@ -13,7 +14,7 @@
                 </figcaption>
             </figure>
             <div class="product-grid__definition">
-                    <h3 class="product-grid__title"> <a href="{{ product_page.url | relative_url }}"> {{ product_page.title }} </a> </h3>
+                <h3 class="product-grid__title"> {{ product_page.title }}</h3>
                 <span class="product-grid__category"> {{ product_page.category }} </span>
                 <span class="product-grid__sub-category">
                     {% if product_page.sub-category %} 
