--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -40,7 +40,7 @@ layout: body
     
     
     <section class="content__row">
-        {% include algolia.html %}
+        {% include algolia.html product_pages=category_product_pages %}
     </section>
 
     {% include promo_section.html site=site %}
