--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -179,6 +179,11 @@
         color: $color_medium;
         margin-bottom: 20px;
         line-height: 150%;
+        h1
+        h2
+        h3 {
+            margin-bottom: 10px;
+        }
         @include smaller-than-tablet { font-size: $font_size_regular; }
     }
 
