adjust padding product content info

--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -164,6 +164,7 @@
         width: 100%;
         max-width: 1300px;
         margin-bottom: 50px;
+        padding: 20px;
     }
 
     &__content-product {
