--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -299,10 +299,11 @@
       transition: 0.25s ease;
     }
     .content-container {
-      background: #eee;
-      position: relative;
-      height: 100px;
-      font-size: 16px;
+        background:#eee;
+        position: relative;
+        height: 400px;
+        font-size: 16px;
+        overflow-y: auto;
       .content {
         position: absolute;
         padding: 10px;
