--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -244,6 +244,7 @@
     border-radius: 3px;
     overflow: hidden;
     margin: 0 auto;
+    text-align: center;
     box-shadow: 2px 2px 50px 6px rgba(0, 0, 0, 0.2);
     input {
       display: none;
