--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -243,7 +243,7 @@
     font-size: 0;
     border-radius: 3px;
     overflow: hidden;
-    margin: 0 auto;
+    margin-top:50px;
     text-align: center;
     box-shadow: 2px 2px 50px 6px rgba(0, 0, 0, 0.2);
     input {
@@ -267,6 +267,7 @@
       font-size: 16px;
       height: 36px;
       line-height: 36px;
+      text-transform: uppercase;
       width: 25%;
       text-align: center;
       background: #f4f4f4;
