--- a/_sass/imports/_product.scss
+++ b/_sass/imports/_product.scss
@@ -320,6 +320,7 @@
         }
         p {
           margin: 10px 0;
+          padding: 20px;
         }
         p, i {
           font-size: 16px;
