fix: footer addres, colors, set responsiveness img

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,4 +18,10 @@
         </ul>
         <div class="footer__legal-notice"> &copy; 2019 iTechRP. Todos os direitos reservados.</div>
     </div>
+    <address class="addr">
+        <p><strong>Endereço:</strong> Rua: São José, 798  - Ribeirão Preto-SP <strong> Contato:</strong> 16 3325-1340 ou contato@itechrp.com.br <strong> CNPJ:</strong> 22.046.867/0001-10</p>
+    </address>
+    <div class="dev">
+        <p>Desenvolvido por <a href="#">Lucas Frutig </a>👽</p>
+    </div>
 </footer>
