--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -67,6 +67,24 @@ hr {
     border-top:1px solid #d2d2d7;
 }
 
+iframe {
+    width:100%;
+}
+
+.addr {
+    font-size:.9em;
+    color: #B3BCBD;
+    padding:20px;
+}
+
+.dev {
+    font-size: .7em;
+    background:#bdbdbd;
+    color: #333;
+    width:100%;
+    padding:5px;
+    text-align:center;
+}
 // Global styles
 @import "imports/reset";
 @import "imports/mixins";
