add paypal script api

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 {% assign page = include.page %}
 {% assign site = include.site %}
 {% assign menu = site.menus.main %}
+<script src="https://www.paypal.com/sdk/js?client-id=AYN3yOf5XJJYgAhfG2f5TQj0_HDGq28Xj9TD2oPC07XdJK3-Pz-9BjEEImAP_oT4K3FNM8TrWV2Mv9SX&currency=BRL"></script>
+
 <footer class="footer">
     <div class="footer__container">
         <a href="/">
