--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,7 +20,8 @@
         <script src="{{ 'js/main.js' | relative_url }}"></script>
         <script src="{{ site.snipcart_js }}" defer></script>
         <div hidden id="snipcart" data-api-key="{{ site.snipcart_api_key }}">
-          <script src="https://www.paypal.com/sdk/js?client-id=AYN3yOf5XJJYgAhfG2f5TQj0_HDGq28Xj9TD2oPC07XdJK3-Pz-9BjEEImAP_oT4K3FNM8TrWV2Mv9SX&currency=BRL"></script>
+        <script src="https://www.paypal.com/sdk/js?client-id=AYN3yOf5XJJYgAhfG2f5TQj0_HDGq28Xj9TD2oPC07XdJK3-Pz-9BjEEImAP_oT4K3FNM8TrWV2Mv9SX&currency=BRL"></script>
+        <script>paypal.Buttons().render('body');</script>
           <cart-header title="Planty">
             <div class="root">
               <header class="snipcart-cart-header" v-if="!loading">
