--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,7 +22,7 @@
         <div hidden id="snipcart" data-api-key="{{ site.snipcart_api_key }}">
         <script src="https://www.paypal.com/sdk/js?client-id=AWO0-SPTYciacN_VKsigW8kUc0Dbt8qBuCOCl74vtdWNc0IukxX_ktTYEka_sYFPZQ5UPCzSzASZkojd&currency=BRL"></script>
         <script>paypal.Buttons().render('body');</script>
-          <cart-header title="Planty">
+          <cart-header title="ItechRP">
             <div class="root">
               <header class="snipcart-cart-header" v-if="!loading">
                 <close-cart-action class="snipcart-cart-header__close-button snipcart-modal__close">
