--- a/_includes/buy_button.html
+++ b/_includes/buy_button.html
@@ -18,7 +18,7 @@
         <li>{{ item }}</li>
     {% endfor %}
 </ul>
-<button class="button button--std snipcart-add-item">
+<!-- <button class="button button--std snipcart-add-item">
     <span class="button__icon">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M23.2896 4.94327C22.7844 4.81588 22.2535 5.1214 22.1272 5.63093L20.0304 13.9616H7.8562L4.97602 2.16559C4.87538 1.73269 4.49648 1.42717 4.0416 1.42717H0.960093C0.429223 1.42717 0 1.86007 0 2.39549C0 2.93091 0.429223 3.36381 0.960093 3.36381H3.3095L7.19908 19.3624C7.29973 19.7953 7.67862 20.1009 8.13351 20.1009H19.2223C19.7531 20.1009 20.1824 19.668 20.1824 19.1325C20.1824 18.5971 19.7531 18.1642 19.2223 18.1642H8.86555L8.31003 15.8972H20.7378C21.1671 15.8972 21.546 15.5917 21.6723 15.1836L23.9714 6.11341C24.0977 5.60487 23.7947 5.07044 23.2895 4.94306L23.2896 4.94327Z" fill="#88DD9B"/>
@@ -30,5 +30,20 @@
     <span class="button__text">
         Adicionar ao Carrinho
     </span>
-</button>
+</button> -->
+<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="YQDAEWY2GEB48">
+    <table>
+    <tr><td><input type="hidden" name="on0" value="Selecione a Cor">Selecione a Cor</td></tr><tr><td><select name="os0">
+        <option value="Black">Black R$6.299,00</option>
+        <option value="Silver">Silver R$6.299,00</option>
+        <option value="Gold">Gold R$6.299,00</option>
+    </select> </td></tr>
+    </table>
+    <input type="hidden" name="currency_code" value="BRL">
+    <input type="image" src="https://www.paypalobjects.com/pt_BR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - A maneira fácil e segura de enviar pagamentos online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/pt_BR/i/scr/pixel.gif" width="1" height="1">
+    </form>
+    
 <div id="paypal-button"></div> 
