--- a/_includes/buy_button.html
+++ b/_includes/buy_button.html
@@ -31,7 +31,7 @@
         Adicionar ao Carrinho
     </span>
 </button> -->
-<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<!-- <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_s-xclick">
     <input type="hidden" name="hosted_button_id" value="YQDAEWY2GEB48">
     <table>
@@ -44,6 +44,6 @@
     <input type="hidden" name="currency_code" value="BRL">
     <input type="image" src="https://www.paypalobjects.com/pt_BR/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - A maneira fácil e segura de enviar pagamentos online!">
     <img alt="" border="0" src="https://www.paypalobjects.com/pt_BR/i/scr/pixel.gif" width="1" height="1">
-    </form>
+    </form> -->
     
 <div id="paypal-button"></div> 
