--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,15 @@
         <script src="{{ site.snipcart_js }}" defer></script>
         <div hidden id="snipcart" data-api-key="{{ site.snipcart_api_key }}">
         <script src="https://www.paypal.com/sdk/js?client-id=AWO0-SPTYciacN_VKsigW8kUc0Dbt8qBuCOCl74vtdWNc0IukxX_ktTYEka_sYFPZQ5UPCzSzASZkojd&currency=BRL"></script>
-        <script>paypal.Buttons().render('body');</script>
+        <script>
+          paypal.Buttons().render({
+            style: {
+              size: 'responsive',
+              shape: 'pill',
+              color: 'black'
+            }
+          },'body');
+        </script>
           <cart-header title="ItechRP">
             <div class="root">
               <header class="snipcart-cart-header" v-if="!loading">
