change paypal style button

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,9 +24,11 @@
         <script>
           paypal.Buttons().render({
             style: {
-              size: 'responsive',
-              shape: 'pill',
-              color: 'black'
+                color:  'black',
+                shape:  'pill',
+                label:  'pay',
+                height: 40,
+                size: 'responsive'
             }
           },'body');
         </script>
