--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -32,7 +32,7 @@
                   height: 55,
               }
   
-          }).render('body');
+          }).render('#paypal-button');
         </script>
           <cart-header title="ItechRP">
             <div class="root">
