--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -96,7 +96,7 @@
             </div>
           </checkout>
         </div>
-        <script>
+        <!-- <script>
           paypal.Buttons({
               createOrder: function(data, actions) {
               return actions.order.create({
@@ -123,7 +123,7 @@
               });
               }
           }).render('#paypal-button');
-      </script>
+      </script> -->
       
     </body> 
 </html>
