--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,7 +23,7 @@
         <script src="https://www.paypal.com/sdk/js?client-id=AWO0-SPTYciacN_VKsigW8kUc0Dbt8qBuCOCl74vtdWNc0IukxX_ktTYEka_sYFPZQ5UPCzSzASZkojd&currency=BRL"></script>
         <script>
           // Render the PayPal button into #paypal-button-container
-          paypal.Buttons({
+/*           paypal.Buttons({
   
               style: {
                   color:  'blue',
@@ -32,7 +32,7 @@
                   height: 55,
               }
   
-          }).render('#paypal-button');
+          }).render('#paypal-button'); */
         </script>
           <cart-header title="ItechRP">
             <div class="root">
