--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,9 +18,9 @@
         
         {{ content }}
         <script src="{{ 'js/main.js' | relative_url }}"></script>
-        <script src="{{ site.snipcart_js }}" defer></script>
         <div hidden id="snipcart" data-api-key="{{ site.snipcart_api_key }}">
-        <script src="https://www.paypal.com/sdk/js?client-id=AWO0-SPTYciacN_VKsigW8kUc0Dbt8qBuCOCl74vtdWNc0IukxX_ktTYEka_sYFPZQ5UPCzSzASZkojd&currency=BRL"></script>
+        <script src="{{ site.snipcart_js }}" defer></script>
+       <!--  <script src="https://www.paypal.com/sdk/js?client-id=AWO0-SPTYciacN_VKsigW8kUc0Dbt8qBuCOCl74vtdWNc0IukxX_ktTYEka_sYFPZQ5UPCzSzASZkojd&currency=BRL"></script> -->
         <script>
           // Render the PayPal button into #paypal-button-container
 /*           paypal.Buttons({
