--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,7 +19,8 @@
         {{ content }}
         <script src="{{ 'js/main.js' | relative_url }}"></script>
         <div hidden id="snipcart" data-api-key="{{ site.snipcart_api_key }}">
-        <script src="{{ site.snipcart_js }}" defer></script>
+        <script src="https://cdn.snipcart.com/themes/v3.0.7/default/snipcart.js"></script>
+        <!-- <script src="{{ site.snipcart_js }}" defer></script> -->
        <!--  <script src="https://www.paypal.com/sdk/js?client-id=AWO0-SPTYciacN_VKsigW8kUc0Dbt8qBuCOCl74vtdWNc0IukxX_ktTYEka_sYFPZQ5UPCzSzASZkojd&currency=BRL"></script> -->
         <script>
           // Render the PayPal button into #paypal-button-container
