--- a/_includes/buy_button.html
+++ b/_includes/buy_button.html
@@ -20,7 +20,7 @@
 </ul>
 <button class="button button--std snipcart-add-item snipcart-button"
     data-item-name="{{ product_page.title }}"
-    data-item-url="{{ product_page.url }}"
+    data-item-url="https://"
     data-item-price="{{ product_page.price_snipcart }}"
     data-item-image="{{ product_page.images.default.thumbnail.fallback }}"
     data-item-description="{{ product_page.description }}"
