--- a/_includes/product_grid.html
+++ b/_includes/product_grid.html
@@ -1,4 +1,5 @@
 {% assign product_pages = include.product_pages %}
+{{product_pages}}
 {% assign category_link_pages = include.category_link_pages %}
 {% assign listCssClass = include.cssClass %}
 {{category_link_pages}}
