--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -43,6 +43,9 @@ layout: body
                 <article class="product__content-product">
                     {{ page.description }}
                 </article>
+                <div class="color-list">
+                    
+                </div>
                 {% include buy_button.html product_page=page %}
                 
             </div>
