--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,13 +27,13 @@
       <span class="close-cart">
         <i class="fas fa-window-close"></i>
       </span>
-      <h2>your cart</h2>
+      <h2>seu carrinho</h2>
       <div class="cart-content">
         <!-- cart item -->
         <!-- end of cart item -->
       </div>
       <div class="cart-footer">
-        <h3>your total: R$ <span class="cart-total"></span></h3>
+        <h3>seu total: R$ <span class="cart-total"></span></h3>
         <button class="clear-cart banner-btn">clear cart</button>
       </div>
     </div>
