--- a/_sass/imports/_content.scss
+++ b/_sass/imports/_content.scss
@@ -108,6 +108,11 @@ margin-bottom: 2rem;
     margin: 0.5rem 0;
     letter-spacing: var(--mainSpacing);
   }
+  .cart-item h6 {
+    font-size: 0.85rem;
+    margin: 0.5rem 0;
+    letter-spacing: var(--mainSpacing);
+  }
   .item-amount {
     text-align: center;
   }
